--- a/vignettes/analyze-tcga-melanoma-with-clinical.Rmd
+++ b/vignettes/analyze-tcga-melanoma-with-clinical.Rmd
@@ -316,15 +316,15 @@ view_feature(mutation_matrix,clin_df2,gsub("`","",rownames(summary_table)[nrow(s
 ### AUC
 
 ```{r}
-auc(clin_df, "os_10y", glmfit_clingen)
-```
-
-```{r}
-auc(clin_df, "os_10y", glmfit_clingen, h_gram = T)
-```
-
-```{r}
-auc(clin_df, "os_10y", glmfit_clingen, roc_plot = T)
+auc(clin_df3 %>% 
+      dplyr::select(os_10y,
+                    rescale_age_at_initial_pathologic_diagnosis,
+                    sample_type,
+                    rescale_breslow_depth_value, 
+                    rescale_initial_weight,
+                    diagnosis_year_group) %>%
+      tidyr::drop_na(),
+    "os_10y", glmfit_clin, h_gram = T, roc_plot = T)
 ```
 
 
